--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,15 @@
   <groupId>io.github.dynamixon</groupId>
   <artifactId>flexorm</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0</version>
+  <version>1.1.0</version>
 
   <name>flexorm</name>
-  <url>http://maven.apache.org</url>
+  <url>https://maven.apache.org</url>
 
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
   <scm>
@@ -38,7 +38,7 @@
     <dependency>
       <groupId>commons-dbutils</groupId>
       <artifactId>commons-dbutils</artifactId>
-      <version>1.7</version>
+      <version>1.8.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
