--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>io.github.dynamixon</groupId>
   <artifactId>flexorm</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1-SNAPSHOT</version>
+  <version>1.3.1</version>
 
   <name>flexorm</name>
   <url>https://maven.apache.org</url>
