--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,12 @@
       <type>pom</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.jsqlparser</groupId>
+      <artifactId>jsqlparser</artifactId>
+      <version>4.8</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
